# Basic-Opencv

./: README.md  parapharsing.ipynb
day1/DisplayImage/: CMakeCache.txt  DisplayImage  DisplayImage.cpp  Makefile  cmake_install.cmake
day2/image1/: CMakeCache.txt  CMakeLists.txt  Image1  Image1.cpp  Makefile  cmake_install.cmake
day2/matBesics/: MatBasics.cpp
day3/drawing/: CMakeCache.txt  CMakeLists.txt  Drawing  Drawing.cpp  Makefile  cmake_install.cmake
day3/erosion_diletion/: CMakeCache.txt  CMakeLists.txt  Erosion  Erosion.cpp  Makefile  cmake_install.cmake
day3/hit_miss/: CMakeCache.txt  CMakeLists.txt  HitMiss  HitMiss.cpp  Makefile  cmake_install.cmake
day3/morphopology/: CMakeCache.txt  CMakeLists.txt  Makefile  Morpho  Morpho.cpp  cmake_install.cmake
day3/random_generator/: CMakeCache.txt  CMakeLists.txt  Makefile  Random  Random.cpp  cmake_install.cmake
day3/smoothing_image/: CMakeCache.txt  CMakeLists.txt  Makefile  Smooth  Smooth.cpp  cmake_install.cmake
day4/cannyDetector/: CMakeCache.txt  CMakeLists.txt  Canny  Canny.cpp  Makefile  cmake_install.cmake
day4/downsampling/: CMakeCache.txt  CMakeLists.txt  DownUpSample  DownUpSample.cpp  Makefile  cmake_install.cmake
day4/filter2d/: CMakeCache.txt  CMakeLists.txt  Filter2D  Filter2D.cpp  Makefile  cmake_install.cmake
day4/hough/: CMakeCache.txt  CMakeLists.txt  Hough  Hough.cpp  Makefile  cmake_install.cmake
day4/houghcircle/: CMakeCache.txt  CMakeLists.txt  HoughCircle  HoughCircle.cpp  Makefile  cmake_install.cmake
day4/laplacian/: CMakeCache.txt  CMakeLists.txt  Laplace  Laplace.cpp  Makefile  cmake_install.cmake
day4/line_detection/: CMakeCache.txt  CMakeLists.txt  LineDetection  LineDetection.cpp  Makefile  cmake_install.cmake
day5/hist_backprojection/: Backprojection  Backprojection.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
day5/histogram_matches/: CMakeCache.txt  CMakeLists.txt  HistrogramMatches  HistrogramMatches.cpp  Makefile  cmake_install.cmake
day5/template_matching/: CMakeCache.txt  CMakeLists.txt  Makefile  TemplateMatching  TemplateMatching.cpp  cmake_install.cmake
day6/distance_transform/: CMakeCache.txt  CMakeLists.txt  DistanceTransformSegmentation  DistanceTransformSegmentation.cpp  Makefile  cmake_install.cmake
(+56 files in other folders)
