cmake_minimum_required(VERSION 2.8)
set(CMAKE_C_COMPILER "/bin/gcc")
set(CMAKE_CXX_COMPILER "/bin/c++")
project( Backprojection )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( Backprojection Backprojection.cpp )
target_link_libraries( Backprojection ${OpenCV_LIBS} )