cmake_minimum_required(VERSION 2.8)
set(CMAKE_C_COMPILER "/bin/gcc")
set(CMAKE_CXX_COMPILER "/bin/c++")
project(DistanceTransformSegmentation)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(DistanceTransformSegmentation DistanceTransformSegmentation.cpp)
target_link_libraries(DistanceTransformSegmentation ${OpenCV_LIBS})